--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     rel="stylesheet"
   />
   <style>
-    /* Style the thumbnail images */
+    /* Thumbnail image styling within the name column */
     .thumb-img {
-      width: 50px;
+      width: 40px;
       height: auto;
+      margin-right: 10px;
+      vertical-align: middle;
     }
   </style>
 </head>
@@ -31,17 +33,13 @@
       />
     </div>
 
-    <!-- Table container -->
+    <!-- Table for displaying items -->
     <div class="table-responsive">
       <table class="table table-striped table-bordered" id="itemsTable">
         <thead class="table-dark">
           <tr>
-            <th>Namespace</th>
-            <th>Image</th>
             <th>Name</th>
             <th>Type</th>
-            <th>Category</th>
-            <th>Soul Points</th>
             <th>Sell Price</th>
           </tr>
         </thead>
@@ -54,30 +52,20 @@
 
   <script>
     // Helper function to create a table row for an item
-    function createTableRow(namespace, item) {
+    function createTableRow(item) {
       const tr = document.createElement('tr');
 
-      // Namespace column
-      const tdNamespace = document.createElement('td');
-      tdNamespace.textContent = namespace;
-      tr.appendChild(tdNamespace);
-
-      // Image column (using a thumbnail)
-      const tdImage = document.createElement('td');
+      // Name column: image and name text combined
+      const tdName = document.createElement('td');
       if (item.image) {
         const img = document.createElement('img');
         img.src = item.image;
         img.alt = item.name;
         img.className = 'thumb-img';
-        tdImage.appendChild(img);
-      } else {
-        tdImage.textContent = 'N/A';
+        tdName.appendChild(img);
       }
-      tr.appendChild(tdImage);
-
-      // Name column
-      const tdName = document.createElement('td');
-      tdName.textContent = item.name || 'N/A';
+      const nameText = document.createTextNode(item.name || 'N/A');
+      tdName.appendChild(nameText);
       tr.appendChild(tdName);
 
       // Type column
@@ -85,17 +73,7 @@
       tdType.textContent = item.type || 'N/A';
       tr.appendChild(tdType);
 
-      // Category column
-      const tdCategory = document.createElement('td');
-      tdCategory.textContent = item.category || 'N/A';
-      tr.appendChild(tdCategory);
-
-      // Soul Points column
-      const tdSoul = document.createElement('td');
-      tdSoul.textContent = item.soulPoints || 'N/A';
-      tr.appendChild(tdSoul);
-
-      // Sell Price column
+      // Sell Price column (combining price and currency if available)
       const tdSellPrice = document.createElement('td');
       let priceText = item.sellPrice ? item.sellPrice : 'N/A';
       if (item.sellCurrency) {
@@ -107,31 +85,41 @@
       return tr;
     }
 
-    // Load JSON data
+    // Load JSON data, deduplicate items, and build the table
     fetch('items.json')
       .then(response => response.json())
       .then(data => {
-        const tableBody = document.getElementById('tableBody');
-        const allRows = [];
-        
-        // Loop over each namespace and add its items as table rows
+        const itemsMap = {};
+
+        // Iterate over each namespace and its items
         for (const namespace in data) {
           const items = data[namespace];
           for (const itemId in items) {
             const item = items[itemId];
-            const row = createTableRow(namespace, item);
-            tableBody.appendChild(row);
-            allRows.push(row);
+            // Deduplicate by item name (if name exists)
+            if (item.name && !itemsMap[item.name]) {
+              itemsMap[item.name] = item;
+            }
           }
         }
-        
-        // Search functionality: filter table rows by item name
+
+        const tableBody = document.getElementById('tableBody');
+        const allRows = [];
+
+        // Create table rows for each deduplicated item
+        Object.values(itemsMap).forEach(item => {
+          const row = createTableRow(item);
+          tableBody.appendChild(row);
+          allRows.push(row);
+        });
+
+        // Search functionality to filter rows by name
         const searchInput = document.getElementById('searchInput');
-        searchInput.addEventListener('input', function () {
+        searchInput.addEventListener('input', function() {
           const query = searchInput.value.toLowerCase();
           allRows.forEach(row => {
-            // The third cell contains the item name
-            const nameCell = row.children[2];
+            // The first cell contains the image and name text
+            const nameCell = row.children[0];
             if (nameCell) {
               const text = nameCell.textContent.toLowerCase();
               row.style.display = text.includes(query) ? '' : 'none';
