--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <div class="flex justify-center mt-6">
     <div class="flex items-center gap-2">
       <button id="prevButton" class="px-2 sm:px-4 py-1 sm:py-2 rounded-lg bg-melvor-surface text-gray-400 hover:bg-melvor-hover hover:text-white transition-all duration-200 text-sm sm:text-base">Prev</button>
-      <div class="relative w-[280px] sm:w-[400px] overflow-x-auto touch-pan-x overscroll-x-contain">
+      <div class="relative w-[280px] sm:w-[400px] overflow-hidden">
         <div class="absolute inset-y-0 left-0 w-8 bg-gradient-to-r from-melvor-bg to-transparent z-10 pointer-events-none"></div>
         <div class="absolute inset-y-0 right-0 w-8 bg-gradient-to-l from-melvor-bg to-transparent z-10 pointer-events-none"></div>
-        <ul id="paginationContainer" class="flex gap-1 sm:gap-1.5 px-4 min-w-max"></ul>
+        <ul id="paginationContainer" class="flex gap-1 sm:gap-1.5 px-4 transition-transform duration-300 ease-in-out"></ul>
       </div>
       <button id="nextButton" class="px-2 sm:px-4 py-1 sm:py-2 rounded-lg bg-melvor-surface text-gray-400 hover:bg-melvor-hover hover:text-white transition-all duration-200 text-sm sm:text-base">Next</button>
     </div>
@@ -306,11 +306,34 @@
         paginationContainer.appendChild(createPageButton(i));
       }
 
-      // Scroll to center current page
+      // Add scroll event listeners
       const container = paginationContainer.parentElement;
       const buttonWidth = 46;
-      const scrollPos = (currentPage - 1) * buttonWidth - (container.offsetWidth / 2) + (buttonWidth / 2);
-      container.scrollLeft = Math.max(0, scrollPos);
+
+      // Handle touch scrolling on mobile
+      if ('ontouchstart' in window) {
+        container.classList.add('overflow-x-auto', 'touch-pan-x', 'overscroll-x-contain');
+        paginationContainer.classList.add('min-w-max');
+        const scrollPos = (currentPage - 1) * buttonWidth - (container.offsetWidth / 2) + (buttonWidth / 2);
+        container.scrollLeft = Math.max(0, scrollPos);
+      } else {
+        // Handle wheel scrolling on desktop
+        container.addEventListener('wheel', (e) => {
+          e.preventDefault();
+          const scrollSpeed = 3;
+          const scrollAmount = (e.deltaY > 0 ? 1 : -1) * scrollSpeed * buttonWidth;
+          const maxScroll = Math.max(0, (totalPages * buttonWidth) - container.offsetWidth + (buttonWidth * 2));
+          const currentScroll = Math.abs(parseInt(paginationContainer.style.transform?.match(/-?\d+/)?.[0] || 0));
+          const newScroll = Math.max(0, Math.min(currentScroll + scrollAmount, maxScroll));
+          paginationContainer.style.transform = `translateX(-${newScroll}px)`;
+        }, { passive: false });
+
+        // Center current page on desktop
+        const maxScroll = Math.max(0, (totalPages * buttonWidth) - container.offsetWidth + (buttonWidth * 2));
+        const initialScrollPos = (currentPage - 1) * buttonWidth - (container.offsetWidth / 2) + (buttonWidth / 2);
+        const centeredScrollPos = Math.max(0, Math.min(initialScrollPos, maxScroll));
+        paginationContainer.style.transform = `translateX(-${centeredScrollPos}px)`;
+      }
     }
 
     // Calculate and render the current page of items.
