--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       // Initialize page
       try {
         // Fetch the JSON data
-        const response = await fetch('items.json');
+        const response = await fetch('public/items.json');
         const gameData = await response.json();
 
         // Define constants
