--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Melvor Items Viewer with Pagination</title>
-  <link href="https://github.com/Galygious/Melvor-Site/edit/master/style.css" rel="stylesheet">
+  <link href="https://raw.githubusercontent.com/Galygious/Melvor-Site/refs/heads/master/style.css" rel="stylesheet">
 </head>
 <body class="bg-melvor-bg text-white min-h-screen p-6">
   <h1 class="text-3xl font-bold mb-8 text-center">Melvor Items Viewer</h1>
